# crossplatformcpp

Linux-Debug/: CMakeLists.txt  CMakeSettings.json
Linux-Debug/Hellocmake/: CMakeLists.txt  Hellocmake.cpp  Hellocmake.h
